--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -101,7 +101,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: Dockerfile.runtime
+          file: Dockerfile
           push: true
           tags: |
             ghcr.io/icicle-ai/insights:latest
